chore: update proto repo

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Application Configuration
 APP_ENV=local
 APP_NAME=grpc-kata-payment-service
-PORT=8080
+GRPC_PORT=9091
 
 # Database Configuration
 POSTGRES_HOST=localhost
